Splitting out views for more user control of the display.

--- a/media/css/console.css
+++ b/media/css/console.css
@@ -132,7 +132,7 @@ div.entry.call-out {
 	background-color:#DDD;
 }
 .directory .month ul li.active a {
-	background-color:#eaf1ff;
+	background-color:#CCC;
 	color:#333;
 	font-weight: bold;
 }
